--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,13 @@ extends layout
 block jumbotron
 	div.jumbotron.index-jumbotron
 		div.container.text-center
+
+			p.
+				Kunst: #{kunst}
+			br
+			p.
+				Kitsch: #{kitsch}
+
 			div.row
 				div.col-lg-6.col-lg-offset-3
 					img.img-responsive(src="/img/index.png",,alt="findsgut",title="findsgut: Verantwortungsvolle Produkte und Dienstleistungen")
