--- a/views/index.jade
+++ b/views/index.jade
@@ -4,19 +4,13 @@ block jumbotron
 	div.jumbotron.index-jumbotron
 		div.container.text-center
 
-			p.
-				Kunst: #{kunst}
-			br
-			p.
-				Kitsch: #{kitsch}
-
 			div.row
 				div.col-lg-6.col-lg-offset-3
-					img.img-responsive(src="/img/index.png",,alt="findsgut",title="findsgut: Verantwortungsvolle Produkte und Dienstleistungen")
+					img.img-responsive(src="/img/headline.png",,alt="headline")
 
 			div.row
-				div.col-lg-8.col-lg-offset-2(style="color:#DDD;margin-top:25px;").text-center
-					h3.foo.
+				div.col-lg-8.col-lg-offset-2.text-center
+					h3.
 						Was meinst Du?
 
 			div.row(style="margin-top:15px;")
