--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,5 @@
 html
 	head
-		block head
-
 		link(rel='shortcut icon',type='image/png',href='/img/wabe.png')
 		title.
 			Kunst oder Kitsch?
@@ -11,6 +9,7 @@ html
 
 		link(href="/css/bootstrap.css",rel="stylesheet", rel="stylesheet")
 		link(href="/css/jumbotron.css",rel="stylesheet", rel="stylesheet")
+		link(href="/css/custom.css",rel="stylesheet", rel="stylesheet")
 
 		style#holderjs-style(type="text/css").
 			.holderjs-fluid {font-size:16px;font-weight:bold;text-align:center;font-family:sans-serif;margin:0}
@@ -18,6 +17,10 @@ html
 		//if lt IE 9].
 			<script src="/js/html5shiv.js"></script>
 			<script src="/js/respond.min.js"></script>
+
+		script(src="/js/gauge.min.js",type="text/javascript")
+
+		block head
 
 	body
 
