--- a/views/voted.jade
+++ b/views/voted.jade
@@ -6,3 +6,38 @@ block jumbotron
 			div.row
 				div.col-lg-12.
 					Soso! #{whatfor}
+
+				div.col-lg-12
+					canvas(width="500",height="250")#foo
+
+				div.col-lg-12
+					Gesamtstimmen: #{total}
+					br
+					Kunst: #{kunst}
+					br
+					Kitsch: #{kitsch}
+
+
+	script(type="text/javascript").
+		var opts = {
+			lines: 12, // The number of lines to draw
+			angle: 0.15, // The length of each line
+			lineWidth: 0.44, // The line thickness
+			pointer: {
+				length: 0.9, // The radius of the inner circle
+				strokeWidth: 0.035, // The rotation offset
+				color: '#000000' // Fill color
+			},
+			limitMax: 'false',   // If true, the pointer will not go past the end of the gauge
+			colorStart: '#6FADCF',   // Colors
+			colorStop: '#8FC0DA',    // just experiment with them
+			strokeColor: '#E0E0E0',   // to see which ones work best for you
+			generateGradient: true
+		};
+
+		var target = document.getElementById('foo'); // your canvas element
+		var gauge = new Gauge(target).setOptions(opts); // create sexy gauge!
+		gauge.maxValue = 3000; // set max gauge value
+		gauge.animationSpeed = 32; // set animation speed (32 is default value)
+		gauge.set(1250); // set actual value
+
