--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ block jumbotron
 
 				div.col-lg-4
 					div.text-center.pull-right
-							a.btn.btn-default.btn-lg(href="/vote/kunst").
+							a.btn.btn-default.btn-lg(href="/vote/kitsch").
 								<img src="/img/wabe.png" style="height:20px;margin-right:10px;" />
 								Kitsch
 
