--- a/views/voted.jade
+++ b/views/voted.jade
@@ -4,18 +4,43 @@ block jumbotron
 	div.jumbotron.index-jumbotron
 		div.container.text-center
 			div.row
-				div.col-lg-12.
-					Soso! #{whatfor}
+				div.col-lg-12(style="display:none")
+					strong(style="font-size:32").
+						Soso&hellip; 
+
+					- if (whatfor === "kitsch")
+						strong(style="font-size:32;color:#d22e81;").
+							Kitsch
+					- else 
+						strong(style="font-size:32;color:black;").
+							Kunst
+					- endif
 
 				div.col-lg-12
-					canvas(width="500",height="250")#foo
+					canvas(width="500",height="400")#foo
 
-				div.col-lg-12
-					Gesamtstimmen: #{total}
-					br
-					Kunst: #{kunst}
-					br
-					Kitsch: #{kitsch}
+				div.col-lg-4
+					div(style="float:right").
+						<img src="/img/icon_20254/icon_20254.png" width="100" />
+						<br />
+						<strong>Kunst: #{counter.kunst}</strong> 
+
+
+				div.col-lg-4
+					div(style="float:left").
+						<div style="font-size:70px;color:white;margin-top:-10px;display:none;" id="incrementKunst">
+							<strong>+1</strong>
+						</div>
+
+				div.col-lg-4
+					div(style="float:left").
+						<img src="/img/icon_25214/icon_25214.png" width="100" />
+						<br />
+						<strong>Kitsch: #{counter.kitsch}</strong> 
+					div(style="float:left").
+						<div style="font-size:70px;color:white;margin-top:-10px;display:none;" id="incrementKitsch">
+							<strong>+1</strong>
+						</div>
 
 
 	script(type="text/javascript").
@@ -26,18 +51,36 @@ block jumbotron
 			pointer: {
 				length: 0.9, // The radius of the inner circle
 				strokeWidth: 0.035, // The rotation offset
-				color: '#000000' // Fill color
+				color: '#ffffff' // Fill color
 			},
 			limitMax: 'false',   // If true, the pointer will not go past the end of the gauge
-			colorStart: '#6FADCF',   // Colors
-			colorStop: '#8FC0DA',    // just experiment with them
-			strokeColor: '#E0E0E0',   // to see which ones work best for you
+			colorStart: '#000000',   // Colors
+			colorStop: '#000000',    // just experiment with them
+			strokeColor: '#d22e81',
 			generateGradient: true
 		};
 
 		var target = document.getElementById('foo'); // your canvas element
 		var gauge = new Gauge(target).setOptions(opts); // create sexy gauge!
-		gauge.maxValue = 3000; // set max gauge value
+		gauge.maxValue = #{counter.total}; // set max gauge value
 		gauge.animationSpeed = 32; // set animation speed (32 is default value)
-		gauge.set(1250); // set actual value
+
+		var val = #{counter.total} - #{counter.kunst};
+		gauge.set(val); // set actual value
+
+		$(function() {
+			if ("#{whatfor}" === "kitsch") {
+				$("#incrementKitsch").css({"display": "block"});
+				$("#incrementKitsch").fadeOut(2000);
+			} else {
+				$("#incrementKunst").css({"display": "block"});
+				$("#incrementKunst").fadeOut(3000);
+			}
+		});
+
+
+
+	//block head.
+		<meta http-equiv="Refresh" content="5; URL=/" />
+		
 
