--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -49,3 +49,7 @@ body {
 	position: absolute;
 	width:100%
 }
+
+#incrementKitsch > strong, #incrementKunst > strong {
+	/*text-shadow: 0px 0px 25px #fff;*/
+}
