minor updates. added readme.

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,8 @@ block jumbotron
 				div.col-lg-10.col-lg-offset-1.text-center
 					h3(style="font-size:60px;font-weight:normal;").
 						Was trifft eher auf diese Ausstellung zu?
+					//h3(style="font-size:60px;font-weight:normal;").
+						Wie nimmst du diese Ausstellung eher wahr?
 
 			div.row(style="margin-top:120px;")
 				div.col-lg-4
