--- a/views/index.jade
+++ b/views/index.jade
@@ -52,6 +52,7 @@ block jumbotron
 				div.col-lg-12#gaugeContainer.
 					'<canvas width="500" height="400" style="margin-top:-35px" id="gauge" />'
 
+			div.row(style="margin-top:-70px")
 				div.col-lg-4
 					div(style="float:right").
 						<img src="/img/icon_20254/icon_20254.png" width="100" />
