--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
 		link(href="/css/bootstrap.css",rel="stylesheet", rel="stylesheet")
 		link(href="/css/jumbotron.css",rel="stylesheet", rel="stylesheet")
 		link(href="/css/custom.css",rel="stylesheet", rel="stylesheet")
+		link(href="/css/animations.css",rel="stylesheet", rel="stylesheet")
 
 		style#holderjs-style(type="text/css").
 			.holderjs-fluid {font-size:16px;font-weight:bold;text-align:center;font-family:sans-serif;margin:0}
@@ -21,6 +22,10 @@ html
 		script(src="/js/gauge.min.js",type="text/javascript")
 		script(src='/js/jquery-1.10.1.min.js') 
 		script(src='/js/bootstrap.js') 
+		script(src="http://localhost:8002/socket.io/socket.io.js")
+
+		script(src='/js/modernizr.custom.js') 
+		script(src='/js/pagetransitions.js') 
 
 		block head
 
