reworked folder structure

--- a/exposition_frontend/views/404.jade
+++ b/exposition_frontend/views/404.jade
@@ -14,11 +14,9 @@ block content
 			h2 Something bad happened&hellip;
 
 			p.
-				Unsere flei&szlig;igen Arbeiterbienchen haben
-				gesucht und gesucht, doch wir k&ouml;nnen diese Seite beim
-				besten Willen einfach nicht finden!
-			
+				Wir k&ouml;nnen diese Seite leider nicht finden.  
+
 		div.col-lg-6
 			h2 Das ist der Troublemaker:
 			
-			div.alert.alert-danger(style="font-size:22px;") https://findsgut.de#{missingurl}
+			div.alert.alert-danger(style="font-size:22px;") #{missingurl}
