--- a/exposition_frontend/views/index.jade
+++ b/exposition_frontend/views/index.jade
@@ -5,29 +5,19 @@ block jumbotron
 		div.jumbotron.index-jumbotron.pt-page.pt-page-1
 			div.container.text-center
 				div.row
-					div.col-lg-10.col-lg-offset-1.text-center
-						h3(style="font-size:160px;font-weight:normal;").
+					div.col-lg-10.col-lg-offset-1.text-center(style='margin-top:-40px')
+						h3(style="font-size:160px;font-weight:normal;").a.
 							Stimm ab!
-						h3(style="font-size:80px;font-weight:normal;").
-							Was ist dein Ausstellungs-Eindruck?
+						h3(style="font-size:80px;font-weight:normal;line-height:90px;").b.
+							Was ist dein Eindruck:<br />
+							Ist diese Ausstellung eher Kunst oder Kitsch?
 
 
 		//div.jumbotron.index-jumbotron#voted(style="display:none;")
 		div.jumbotron.index-jumbotron.pt-page.pt-page-2
 			div.container.text-center
+				//img(src="/img/bang.svg",style="width:900px;position:absolute;left:200px;")
 				div.row
-					div.col-lg-12(style="display:none")
-						strong(style="font-size:32").
-							Soso&hellip; 
-
-						- if (whatfor === "kitsch")
-							strong(style="font-size:32;color:#d22e81;").
-								Kitsch
-						- else 
-							strong(style="font-size:32;color:black;").
-								Kunst
-						- endif
-
 					div.col-lg-12#gaugeContainer.
 						'<canvas width="500" height="400" style="margin-top:-35px" id="gauge" />'
 
@@ -61,10 +51,35 @@ block jumbotron
 		function vote(whatfor) {
 			if (voting) return;
 			voting = true;
+			//$('.pt-page-1 h3').jumble([255,220,100],[255,255,255],false,true,200);
+			//$('h3').jumble([120,190,240],true,true,false,100); 
+			/*
+			$('h3.a').funnyText({
+				speed: 50,
+				borderColor: '#ff00ff',
+				activeColor: '#ff0000',
+				color: '#ffffff',
+				fontSize: '160px'
+			});
+			$('h3.b').funnyText({
+				speed: 50,
+				borderColor: '#ffff00',
+				activeColor: '#ffff00',
+				color: '#0000ff',
+				fontSize: '80px'
+			});
+			*/
+
+
+			$("body").animate( { backgroundColor: "#ffff00" }, 1000);
+			$(".bang").animate( { opacity: "1.0" }, 1000);
+
 			//$("#gauge").remove();
 			//document.getElementById("gaugeContainer").innerHTML = 
 				//'<canvas width="500" height="400" style="margin-top:-35px" id="gauge" />'; 
 
+			//return;
+			setTimeout(function() {
 			$.get("/vote/" + whatfor, function (data) {
 				createGauge();
 				gauge.maxValue = data.counter.total; // set max gauge value
@@ -95,6 +110,7 @@ block jumbotron
 					//});
 				});
 			});
+			}, 700);
 		}
 
 		fadeIncOut = function(whatfor) {
@@ -105,6 +121,27 @@ block jumbotron
 			}
 
 			setTimeout("pageTransition.nextPage(30, function() {voting=false;})", 3000);
+			//$('.pt-page-1 h3').jumble([255,255,255],[255,255,255],false,false);
+			/*
+			$('h3.a').funnyText({
+				speed: 10000,
+				borderColor: 'white',
+				activeColor: 'white',
+				color: 'white',
+				fontSize: '160px'
+			});
+			$('h3.b').funnyText({
+				speed: 10000,
+				borderColor: 'white',
+				activeColor: 'white',
+				color: 'white',
+				fontSize: '80px'
+			});
+			*/
+			setTimeout(function() {
+				$("body").animate( { backgroundColor: "black" }, 1000);
+				$(".bang").animate( { opacity: "0.0" }, 1000);
+			}, 3000);
 
 			//$("#voted").delay(3000).pageTransition.nextPage(2);
 			/*
@@ -126,6 +163,7 @@ block jumbotron
 			createGauge();
 			pageTransition = PageTransitions();
 			pageTransition.init();
+			//$('.pt-page-1 h3').jumble([255,255,255],[255,255,255],false,false);
 
 			var socket = io.connect('http://localhost:8002');
 			socket.on('connect', function () {
